Fix partners readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2044,14 +2044,12 @@ a.navbar-brand.our_logo {
 
 .partner {
   width: 33.33%;
-  height: 30px;
+  height: 120px;
   background: linear-gradient(#0d1115, #20252a);
-  margin: 0 5px;
+  margin-right: 5px;
   border-radius: 7px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-right: 10px;
+  flex-direction: column;
 }
 
 .partner-line {
@@ -2068,20 +2066,20 @@ a.navbar-brand.our_logo {
 .partner .iac-icon,
 .partner .ccc-icon,
 .partner .deplastic-icon {
-  width: 30px;
-  height: 30px;
+  width: 100%;
+  height: 60px;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-}
-
-.partner .iac-icon {
-  background-image: url(../images/iAcademy\ Full\ 1.svg);
+  background-size: 80% 80%;
+  margin: 10% 0 10% 0;
 }
 
 .partner .ccc-icon {
   background-image: url(../images/image\ 26.svg);
-  width: 26px;
-  height: 26px;
+}
+
+.partner .iac-icon {
+  background-image: url(../images/iAcademy\ Full\ 1.svg);
 }
 
 .partner .deplastic-icon {
@@ -2089,20 +2087,9 @@ a.navbar-brand.our_logo {
 }
 
 .col-md-3.col-sm-6.col-xs-12.segment-four .partner label {
-  font-size: 3px;
+  font-size: 8px;
   letter-spacing: 1px;
   color: white;
-  font-family: AtypBold;
-}
-
-.partner .content {
-  width: 40%;
-}
-
-.partner .content2 {
-  width: 60%;
-}
-
-.partner .content2 label {
-  margin-left: 5px;
+  font-family: AgrandirRegular;
+  text-align: center;
 }
